# test-cxx-OpenMP-installer

./: CMakeLists.txt  README.md  main.cpp
